// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests Switch Checked 1`] = `
<div
  data-dark={false}
>
  <div>
    <input
      checked={true}
      className="charcoal-switch-input"
      id="test-id"
      label="checked"
      name="name"
      onChange={[Function]}
      role="switch"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Storybook Tests Switch Default 1`] = `
<div
  data-dark={false}
>
  <div>
    <input
      checked={false}
      className="charcoal-switch-input"
      id="test-id"
      name="name"
      onChange={[Function]}
      role="switch"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Storybook Tests Switch Disabled 1`] = `
<div
  data-dark={false}
>
  <div>
    <label
      aria-disabled={true}
      className="charcoal-switch__label"
      htmlFor="test-id"
    >
      <input
        checked={false}
        className="charcoal-switch-input"
        id="test-id"
        name="disabled"
        onChange={[Function]}
        role="switch"
        type="checkbox"
      />
      <div
        className="charcoal-switch__label_div"
      >
        Label
      </div>
    </label>
  </div>
</div>
`;

exports[`Storybook Tests Switch Label 1`] = `
<div
  data-dark={false}
>
  <div>
    <label
      className="charcoal-switch__label"
      htmlFor="test-id"
    >
      <input
        checked={false}
        className="charcoal-switch-input"
        id="test-id"
        name="label"
        onChange={[Function]}
        role="switch"
        type="checkbox"
      />
      <div
        className="charcoal-switch__label_div"
      >
        Label
      </div>
    </label>
  </div>
</div>
`;
